# wishlist

./: .gitignore  LICENSE  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 01-2023_11_18_2144-initial_structure.py  248fd3c56329_add_uuid_link_price_columns.py  41f964985bde_add_option_for_uuid_field.py  4b02fe0a5899_first_migration.py  51875dda0b52_add_uuid_link_price_columns.py  8c0fe552f543_add_comment_to_gift.py
api/: main.py
api/core/: base.py  config.py  db.py
api/crud/: gift.py
api/models/: gift.py
api/routes/: __init__.py  gift.py
api/schemas/: gift.py
app/: constants.py  main.py
app/api/: endpoints.py  routers.py
app/api/endpoints/: __init__.py  gift.py
app/core/: base.py  config.py  db.py
app/crud/: gift.py
app/models/: gift.py
app/schemas/: gift.py
wishlist/wishlist/: settings.py  urls.py
